--- a/templates/giohang.html
+++ b/templates/giohang.html
@@ -1,3 +1,5 @@
+{%extends 'base.html'%}
+{%block content%}
 <!DOCTYPE html>
 <html lang="vi">
 
@@ -5,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="shortcut icon" href="img/favicon.ico" />
+	<link rel="shortcut icon" href="./static/img/favicon.ico" />
 
 	<title>HighTech Store</title>
 
@@ -15,17 +17,17 @@
 
 	<!-- our files -->
 	<!-- css -->
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/topnav.css">
-	<link rel="stylesheet" href="css/header.css">
-	<link rel="stylesheet" href="css/taikhoan.css">
-	<link rel="stylesheet" href="css/gioHang.css">
-	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="./static/css/style.css">
+	<link rel="stylesheet" href="./static/css/topnav.css">
+	<link rel="stylesheet" href="./static/css/header.css">
+	<link rel="stylesheet" href="./static/css/taikhoan.css">
+	<link rel="stylesheet" href="./static/css/gioHang.css">
+	<link rel="stylesheet" href="./static/css/footer.css">
 	<!-- js -->
-	<script src="data/products.js"></script>
-	<script src="js/classes.js"></script>
-	<script src="js/dungchung.js"></script>
-	<script src="js/giohang.js"></script>
+	<script src="./static/data/products.js"></script>
+	<script src="./static/js/classes.js"></script>
+	<script src="./static/js/dungchung.js"></script>
+	<script src="./static/js/giohang.js"></script>
 
 </head>
 
@@ -46,6 +48,9 @@
 	<div class="footer"><script>addFooter();</script></div>
 
 	<i class="fa fa-arrow-up" id="goto-top-page" onclick="gotoTop()"></i>
+	<script src="{{url_for('static',filename='banner.css,baohanh.css,chitietsanpham.css,footer.css,gioHang.css,gioithieu.css,header.css,home_product.css,lienhe.css,nguoidung.css,pagination_phantrang.css,reset.css,style.css,taikhoan.css,tintuc.css,topnav.css,trangchu.css,tuyendung.css')}}"></script>
+
 </body>
 
 </html>
+{%endblock%}
