--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title> HighTech Store- Admin</title>
     <link rel="shortcut icon" href="./static/img/favicon.ico" />
 
@@ -45,7 +44,7 @@
                 <hr>
             </li>
             <li class="nav-item">
-                <a href="index.html" class="nav-link" onclick="logOutAdmin(); return true;">
+                <a href="index" class="nav-link" onclick="logOutAdmin(); return true;">
                     <i class="fa fa-arrow-left"></i>
                     Đăng xuất (về Trang chủ)
                 </a>
