--- a/templates/trungtambaohanh.html
+++ b/templates/trungtambaohanh.html
@@ -30,7 +30,7 @@
             khoiTao();
             // thêm tags (từ khóa) vào khung tìm kiếm
             var tags = ["Samsung", "iPhone", "Huawei", "Oppo", "Mobi"];
-            for (var t of tags) addTags(t, "index.html?search=" + t);
+            for (var t of tags) addTags(t, "index?search=" + t);
         }
     </script>
 </head>
